Aligned .features. Used right font-sizes for p tags. Fixed footer.

--- a/style.css
+++ b/style.css
@@ -47,6 +47,17 @@ h4,
     margin: 0.2em auto;
 }
 
+.sec_1>h1 {
+    margin-bottom: 1rem;
+}
+
+.sec_1>p {
+    max-width: 550px;
+    margin: 0 auto;
+    font-size: 17px;
+    line-height: 25px;
+}
+
 p {
     color: hsl(201, 11%, 66%);
     margin: 1em;
@@ -72,6 +83,13 @@ button {
 
 .sec_2 {
     margin: 4em auto;
+}
+
+.sec_2>p {
+    max-width: 550px;
+    margin: 0 auto;
+    font-size: 16px;
+    line-height: 25px;
 }
 
 .sec_2>.sub-title {
@@ -119,6 +137,8 @@ button {
     display: flex;
     flex-direction: column;
     align-items: start;
+    text-align: justify;
+    /* border: 1px solid red; */
 }
 
 .features>.feature2 {
@@ -126,6 +146,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: start;
+    text-align: justify;
 }
 
 .features>.feature3 {
@@ -133,10 +154,33 @@ button {
     display: flex;
     flex-direction: column;
     align-items: start;
+    text-align: justify;
+}
+
+.feature1>p,
+.feature2>p,
+.feature3>p {
+    margin-left: 0;
+    font-size: 14px;
 }
 
 .sec_3 {
     margin: 6em;
+}
+
+.sec_3>h2,
+.sec_4>h2,
+.sec_5>h2 {
+    margin-bottom: 1rem;
+}
+
+.sec_3>p,
+.sec_4>p,
+.sec_5>p {
+    max-width: 550px;
+    margin: 0 auto;
+    font-size: 15px;
+    line-height: 25px;
 }
 
 .device_img {
@@ -159,6 +203,10 @@ button {
     margin: auto 5em;
 }
 
+.tools>div>p {
+    font-size: 15px;
+}
+
 h4 {
     margin-top: 1em;
 }
@@ -174,13 +222,12 @@ h4 {
 }
 
 .footer {
-    width: 100%;
-    /* height: 100px; */
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    border: 1px solid black;
     padding: auto 100em;
+    margin: 4rem 4rem 0 4rem;
+    /* background-color: hsl(201, 11%, 66%); */
 }
 
 .footer_logo {
@@ -189,63 +236,48 @@ h4 {
     padding: 25px 0px;
 }
 
-.footer>.footer_logo {
-    width: 10%;
-    /* border: 1px solid black; */
+.quick_links {
+    display: flex;
+    justify-content: space-between;
 }
 
-.footer>.quick_links {
-    width: 80%;
-    /* border: 1px solid black; */
+.grp_1>ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
-.footer>.social {
-    width: 10%;
-    /* border: 1px solid black; */
+.grp_2>ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
-ul {
-    /* display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap; */
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    grid-template-rows: repeat(auto-fill, minmax(100px, 1fr));
-    /* grid-gap: 0.2em; */
-    grid-template-areas: "FAQ privacy install" "contact press .";
+.grp_3>ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
-.FAQ {
-    grid-area: FAQ;
-}
-
-.contact {
-    grid-area: contact;
-}
-
-.privacy {
-    grid-area: privacy;
-}
-
-.press {
-    grid-area: press;
-}
-
-.install {
-    grid-area: install;
-}
-
-li {
+.quick_links>.grp>ul>li {
     display: inline;
+    padding-top: 1rem;
 }
 
 ul>li>a {
+    color: hsl(210, 10%, 33%);
+    font-size: 15px;
     text-decoration: none;
+    padding: 2rem;
 }
 
 .social {
     display: flex;
     justify-content: space-around;
-    font-size: 1.5em;
+    font-size: 1.2em;
     color: hsl(210, 10%, 33%);
+}
+
+.social>span {
+    padding: 0.5rem;
 }
